syntax = "proto3";

package api.proj;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "public/response/response.proto";
import "validate/validate.proto";

option go_package = "store/api/proj;projpb";


message Feedback {
  string _id = 1 [json_name = '_id'];
  string category = 2;
  string url = 3;
  map<string, string> content = 4;

  string userId = 5;
  int64 createdAt = 6;
  repeated string issues = 7;
  string targetId = 8;
}

message FeedbackList {
  repeated Feedback list = 1;
  int64 total = 2;
}